--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         
         <h3 onclick="toggleContent('content8')">En stemme til Anker er en stemme til deg!</h3>
         <div id="content8" class="content">
-            <p>Sammen kan vi forme en bedre fremtid for oss alle. Din stemme betyr noe. Stem på NyPartiet for en lysere og grønnere fremtid!</p>
+            <p>Sammen kan vi forme en bedre fremtid for oss alle. Din stemme betyr noe. Stem på NyPartiet for en lysere og grønnere fremtid! NySkapning, NyTenkning, NyPartiet!</p>
         </div>
     </div>
 
