--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <li>Ta mer vare på naturen</li>
                 <li>Bruke mer fornybar energi</li>
                 <li>Kutte ned på diesel- og oljebruk</li>
+                <li>Flere sykkelveier</li>
             </ul>
         </div>
         
