--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
                 <li>Flere sykkelveier</li>
             </ul>
         </div>
-        
+
+        <h2 onclick="toggleContent('content8')">Våre Kjernesaker</h2>
+        <div id="content8" class="content">
+            <p>Vi står for å legalisere hasj,fordi det kommer til å minske risikoen for at ungdommen kommer til å prøve sterkere stoffer</p>
+        </div>
         <h3 onclick="toggleContent('content8')">En stemme til Anker er en stemme til deg!</h3>
         <div id="content8" class="content">
             <p>Sammen kan vi forme en bedre fremtid for oss alle. Din stemme betyr noe. Stem på NyPartiet for en lysere og grønnere fremtid! NySkapning, NyTenkning, NyPartiet!</p>
