--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
             </ul>
         </div>
 
-        <h2 onclick="toggleContent('content8')">Våre Kjernesaker</h2>
+        <h2 onclick="toggleContent('content8')">Legalisering</h2>
         <div id="content8" class="content">
-            <p>Vi står for å legalisere hasj,fordi det kommer til å minske risikoen for at ungdommen kommer til å prøve sterkere stoffer</p>
+            <p>Vi står for å legalisere hasj, fordi det kommer til å minske risikoen for at ungdommen kommer til å prøve sterkere stoffer</p>
         </div>
         <h3 onclick="toggleContent('content8')">En stemme til Anker er en stemme til deg!</h3>
         <div id="content8" class="content">
