--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
 
         <h2 onclick="toggleContent('content8')">Legalisering</h2>
         <div id="content8" class="content">
-            <p>Vi står for å legalisere hasj, fordi det kommer til å minske risikoen for at ungdommen kommer til å prøve sterkere stoffer</p>
+            <p>Noen av grunnene til legaliseringen er:</p>
+            <li>Reduksjon av svart marked-aktivitet</li>
+            <li>Forskningssmuligheter</li>
+            <li>Medisinsk bruk</li>
         </div>
         <h3 onclick="toggleContent('content8')">En stemme til Anker er en stemme til deg!</h3>
         <div id="content8" class="content">
