--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             <li>Reduksjon av svart marked-aktivitet</li>
             <li>Forskningssmuligheter</li>
             <li>Medisinsk bruk</li>
+            <li>Stanse organisert kriminalitet</li>
         </div>
         <h3 onclick="toggleContent('content9')">En stemme til Anker er en stemme til deg!</h3>
         <div id="content9" class="content">
